--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
+    "password": "0000",
     "database": "randfood",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -9,14 +9,14 @@
   },
   "test": {
     "username": "root",
-    "password": "root",
+    "password": "0000",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "root",
+    "password": "0000",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
