--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "moment": "^2.24.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mysql2": "^1.7.0",
