--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "메뉴 선택 서s비스",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production PORT=80 pm2 start app.js -i 0",
+    "start": "nodemon app",
     "dev": "nodemon app"
   },
   "author": "Hwan",
@@ -36,6 +36,7 @@
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
     "sequelize": "^4.44.3",
+    "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   }
 }
