--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mysql2": "^1.7.0",
+    "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.2",
     "open-color": "^1.7.0",
     "passport": "^0.4.0",
     "passport-kakao": "0.0.5",
@@ -37,6 +39,7 @@
     "sass-loader": "^7.1.0",
     "sequelize": "^4.44.3",
     "serve-favicon": "^2.5.0",
+    "windows-build-tools": "^5.2.2",
     "winston": "^3.1.0"
   }
 }
