--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "nodemon": "^2.0.2",
     "open-color": "^1.7.0",
     "passport": "^0.4.0",
-    "passport-kakao": "0.0.5",
+    "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "pm2": "^3.5.1",
     "pug": "^2.0.3",
