--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "메뉴 선택 서s비스",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
+    "start": "node app.js",
     "dev": "nodemon app"
   },
   "author": "Hwan",
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "pm2": "^3.5.1",
+    "psql": "^0.0.1",
     "pug": "^2.0.3",
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
