--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "passport-kakao": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "pm2": "^3.5.1",
+    "postgres": "^1.0.2",
     "psql": "^0.0.1",
     "pug": "^2.0.3",
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
-    "sequelize": "^4.44.3",
+    "sequelize": "^4.44.4",
     "serve-favicon": "^2.5.0",
     "winston": "^3.1.0"
   }
