--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ss",
+  "name": "hwan",
   "version": "1.0.1",
-  "description": "메뉴 선택 서s비스",
+  "description": "메뉴 선택 서비스",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -21,7 +21,6 @@
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "helmet": "^3.21.1",
-    "hoek": "^4.2.1",
     "hpp": "^0.2.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.0",
@@ -30,6 +29,7 @@
     "node-pre-gyp": "^0.14.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.2",
+    "npm": "^8.13.1",
     "open-color": "^1.7.0",
     "passport": "^0.4.0",
     "passport-kakao": "^1.0.0",
@@ -38,7 +38,6 @@
     "pg-hstore": "^2.3.4",
     "pm2": "^3.5.1",
     "postgres": "^1.0.2",
-    "psql": "^0.0.1",
     "pug": "^2.0.3",
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
